<resources>
    <string name="app_name">iamfeeling</string>
    <string name="welcome">歡迎來到FEELING</string>
    <string name="login_description_1">加 入 會 員 或 登 入 帳 號</string>
    <string name="login_description_2">開 啟 你 的 心 感 知 旅 程</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="new_register">新會員註冊</string>
    <string name="old_login">舊會員登入</string>
    <string name="facebook_login">使用Facebook帳號登入</string>
    <string name="title_activity_portal">PortalActivity</string>
    <string name="wall">Wall</string>
    <string name="new_post">New Post</string>
    <string name="personal_post">Personal Post</string>
    <string name="more">More</string>
    <string name="enter_account_password">請輸入帳號｀密碼</string>
    <string name="enter_not_complete">請輸入完整資訊</string>
    <string name="error_account_password">帳號｀密碼錯誤</string>
    <string name="previous_step">退回</string>
    <string name="go_on">繼續</string>
    <string name="hello_world">Hello world!</string>
    <string name="select_color">選取顏色</string>
    <string name="select_photo">選取照片</string>
    <string name="select_quote">選取引句</string>
    <string name="title_activity_photo_picker">PhotoPickerActivity</string>
    <string name="title_activity_color_picker">ColorPickerActivity</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="title_activity_quote_picker">QuotePickerActivity</string>
    <string name="title_activity_replacement_picker">ReplacementPickerActivity</string>
    <string name="move_and_select_quote">請上下移動選擇符合您心情的引句</string>
    <string name="move_and_select_quote_2">請點選選擇符合您心情的引句</string>
    <string name="move_and_select_replacement">請點選您想替換的詞彙</string>
    <string name="select_word">請上下移動換選其他替換詞句</string>
    <string name="more_thought">添加更多想法或直接分享</string>
    <string name="anonymous_post">以匿名發布</string>
    <string name="post_to_public_wall">發布至公眾牆</string>
    <string name="share_friend_or_group">分享至特定朋友或群組</string>
    <string name="share">分享</string>
    <string name="new_nickname">使用新的匿名</string>
    <string name="history_nickname">使用以往的匿名</string>
    <string name="post_success">完  成</string>
    <string name="enter_nickname">輸入暱稱</string>
    <string name="no_enter_nickname">請輸入暱稱</string>
    <string name="share_something">分享點什麼吧</string>
    <string name="empty_history_nickname">目前尚無匿名紀錄</string>
    <string name="empty_friend">尚未加入任何好友</string>
    <string name="add">+</string>
    <string name="delete">刪除</string>
    <string name="sure_delete_member">確定刪除%1$s？</string>
    <string name="empty_selected_friends">請選取所要分享的朋友</string>
    <string name="title_activity_word_picker">WordPickerActivity</string>
    <string name="title_activity_share_post">SharePostActivity</string>
    <string name="title_activity_feeling_detail">FeelingDetailActivity</string>
    <string name="personal_feeling">個人貼文</string>
    <string name="saved_feeling">已存貼文</string>
    <string name="review">Review - 周期回顧</string>
    <string name="account_or_email">帳號/電子信箱</string>
    <string name="password">密碼</string>
    <string name="sure_delete_photo">確定刪除所點選的照片？</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_color_picker2">ColorPicker2Activity</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="personal_data">個人資料</string>
    <string name="settings">設定</string>
    <string name="qr_code">QR碼</string>
    <string name="logout">登出</string>
    <string name="title_activity_personal">PersonalActivity</string>
    <string name="account_name">用戶名</string>
    <string name="phone_number">電話號碼</string>
    <string name="email">電子信箱</string>
    <string name="friend">朋友</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="auto_login">自動登入</string>
    <string name="inform">通知</string>
    <string name="safety_and_secret">安全與隱私</string>
    <string name="about_feeling">關於Feeling</string>
    <string name="title_activity_tag_picker">TagPickerActivity</string>
    <string name="server_no_response">Server目前沒有回應，請稍後再試</string>
    <string name="show_more">顯示更多</string>
    <string name="title_activity_sense_picker">SensePickerActivity</string>
    <string name="sense_confirm">您選取了%1$s</string>
    <string name="account">帳號</string>
    <string name="nickname">暱稱</string>
    <string name="password_confirm">確認密碼</string>
    <string name="confirm_incorrect">密碼確認錯誤</string>
    <string name="register_success">註冊成功</string>
    <string name="warning">警告</string>
    <string name="loading">Loading...</string>
    <string name="update_success">修改成功</string>
    <string name="update_fail">修改失敗</string>
    <string name="login_fail">登入失敗</string>
    <string name="trace">追蹤</string>
    <string name="add_friend">加好友</string>
    <string name="friends_management">好友管理</string>
    <string name="add_friends">新增好友</string>
    <string name="request_fail">請求失敗</string>
    <string name="already_sent_request">已送出邀請</string>
    <string name="group">群組</string>
    <string name="request">邀請</string>
    <string name="recipient">接受者</string>
    <string name="agree">同意</string>
</resources>
