<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:background="@color/white">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo"
        android:id="@+id/ivLogo"/>
    <TextView android:text="@string/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvWelcome"
        android:layout_below="@id/ivLogo"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:textSize="28dp"
        android:textStyle="bold"/>
    <TextView android:text="@string/login_description_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvDescription1"
        android:layout_below="@id/tvWelcome"
        android:layout_centerHorizontal="true"
        android:textSize="24dp"
        android:textStyle="bold"/>
    <TextView android:text="@string/login_description_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvDescription2"
        android:layout_below="@id/tvDescription1"
        android:layout_centerHorizontal="true"
        android:textSize="24dp"
        android:textStyle="bold"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_register"
        android:textSize="24dp"
        android:layout_below="@id/tvDescription2"
        android:background="@color/grey_e"
        android:id="@+id/btnRegister"
        android:layout_marginTop="40dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/old_login"
        android:textSize="24dp"
        android:layout_below="@id/btnRegister"
        android:background="@color/grey_a"
        android:id="@+id/btnLogin"
        android:layout_marginTop="20dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/facebook_login"
        android:textSize="24dp"
        android:background="@color/facebook"
        android:layout_below="@id/btnLogin"
        android:id="@+id/btnFacebookLogin"
        android:layout_marginTop="20dp"/>
</RelativeLayout>
