<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_a"
        android:padding="10dp"
        android:id="@+id/rlButtons"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:id="@+id/tvCancel"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:textColor="@color/white"
            android:text="@string/cancel" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:id="@+id/tvCommit"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:layout_marginTop="2dp"
            android:textColor="@color/black"
            android:text="@string/commit" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/rlButtons">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/flPhotos"
            android:layout_weight="3">
        </FrameLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvQuote"
                android:layout_margin="10dp"
                android:maxLines="3"
                android:textSize="18dp"
                android:textStyle="bold"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/flTags"
                android:layout_marginTop="10dp"
                android:layout_below="@id/tvQuote"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:layout_marginTop="10dp"
                android:textSize="14dp"
                android:layout_below="@id/flTags"
                android:hint="@string/more_thought"
                android:id="@+id/etThought"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rlButtons"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:visibility="gone"
                android:id="@+id/llEnterNickname"
                android:background="#ddffffff">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_nickname"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="30dp"
                    android:textSize="24dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    android:singleLine="true"
                    android:id="@+id/etNickname"
                    android:layout_marginTop="30dp"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone"
                android:id="@+id/rlHistoryNickname"
                android:background="#ddffffff">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvEmptyHistoryNickname"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"/>
                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/lvHistoryNickname"/>
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/llPostOptions"
                android:visibility="gone"
                android:background="#cccccccc">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/tvAnonymous"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/anonymous_post"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/tvPost"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/post_to_public_wall"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:id="@+id/tvShare"
                    android:gravity="center"
                    android:text="@string/share_friend_or_group"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/llAnonymous"
                android:visibility="gone"
                android:background="#cccccccc">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/tvEnterNickname"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/new_nickname"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:id="@+id/tvHistoryNickname"
                    android:gravity="center"
                    android:text="@string/history_nickname"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rlComplete"/>
</RelativeLayout>
